[package]
name = "graph_pca"
version = "0.2.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
nalgebra = "0.35.0"
rayon = "1.8.0"
kdtree = "0.8.0"
petgraph = "0.8.3"

[lib]
name = "graph_pca"
path = "src/python_lib.rs"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
